k8s/apps/adguard/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: adguard
  namespace: adguard
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "AdGuard"
    gethomepage.dev/group: "Infrastructure"
    gethomepage.dev/icon: "adguard-home.png"
    gethomepage.dev/description: "DNS & Ad Blocking"
    gethomepage.dev/href: "https://adguard.lan"
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`adguard.lan`)
      kind: Rule
      services:
        - name: adguard-web
          port: 80
